--- a/hs_core/templates/pages/genericresource.html
+++ b/hs_core/templates/pages/genericresource.html
@@ -2909,13 +2909,13 @@
                         ext = fileList[i].name.match(/\.([^\.]+)$/)[1];
                         ext = "'." + ext + "'";
                         var ext_found = false;
-                        if (ext === file_types) {
+                        if (ext.toLowerCase() === file_types) {
                             ext_found = true;
                         }
                         else {
                             var index;
                             for (index = 0; index < file_types.length; index++) {
-                                if (ext === file_types[index].trim()) {
+                                if (ext.toLowerCase() === file_types[index].trim()) {
                                     ext_found = true;
                                     break;
                                 }
