[#502] address review comments

--- a/hs_core/templates/pages/create-resource.html
+++ b/hs_core/templates/pages/create-resource.html
@@ -192,15 +192,15 @@
             var ext = ".*";
             for (var i = 0; i < fileList.length; i++) {
                 ext = fileList[i].name.match(/\.([^\.]+)$/)[1];
-                ext = "." + ext;
+                ext = "." + ext.toLowerCase();
                 var ext_found = false;
-                if (ext.toLowerCase() === file_types) {
+                if (ext === file_types) {
                     ext_found = true;
                 }
                 else {
                     var index;
                     for (index = 0; index < file_types.length; index++) {
-                        if (ext.toLowerCase() === file_types[index].trim()) {
+                        if (ext === file_types[index].trim()) {
                             ext_found = true;
                             break;
                         }
