--- a/hs_core/templates/pages/genericresource.html
+++ b/hs_core/templates/pages/genericresource.html
@@ -2937,7 +2937,7 @@
             }
             function zoomCoverageMap(bounds) {
                 // Zoom in on the shape
-                var GLOBE_WIDTH = 256; // a constant in Google's map projection
+                var GLOBE_WIDTH = 256; // a constant in Google maps projection
                 var c_west = bounds.west * 8;    // Zooms out on the shape a little so that we can see it
                 var c_east = bounds.east * 8;
                 var angle = c_east - c_west;
