[#548] implemented the 'add_metadata_element_to_xml()' function and did general enhancements

--- a/hs_core/templates/pages/metadata_terms.html
+++ b/hs_core/templates/pages/metadata_terms.html
@@ -884,17 +884,17 @@
             <li><strong>Label: </strong>Model Input</li>
             <li><strong>Description: </strong>HydroShare Class that includes all the metadata elements related to Model Instance resource input files</li>
         </ul>
-    <a name="warm-upPeriodType"></a>
+    <a name="warmupPeriodType"></a>
         <ul >
-            <li><strong>Term: </strong>warm-upPeriodType</li>
-            <li><strong>URI: </strong><a href="#warm-upPeriodType">http://www.hydroshare.org/terms/warm-upPeriodType</a></li>
+            <li><strong>Term: </strong>warmupPeriodType</li>
+            <li><strong>URI: </strong><a href="#warmupPeriodType">http://www.hydroshare.org/terms/warmupPeriodType</a></li>
             <li><strong>Label: </strong>Warm-up period type</li>
             <li><strong>Description: </strong>The warm-up period type</li>
         </ul>
-    <a name="warm-upPeriodValue"></a>
+    <a name="warmupPeriodValue"></a>
         <ul >
-            <li><strong>Term: </strong>warm-upPeriodValue</li>
-            <li><strong>URI: </strong><a href="#warm-upPeriodValue">http://www.hydroshare.org/terms/warm-upPeriodValue</a></li>
+            <li><strong>Term: </strong>warmupPeriodValue</li>
+            <li><strong>URI: </strong><a href="#warmupPeriodValue">http://www.hydroshare.org/terms/warmupPeriodValue</a></li>
             <li><strong>Label: </strong>Warm-up period in years</li>
             <li><strong>Description: </strong>The numeric value of the warm-up period in years</li>
         </ul>
